Added labels to tooltip

--- a/gui/views/layout.jade
+++ b/gui/views/layout.jade
@@ -4,7 +4,7 @@ html
 		title  Klima ve výběhu
 	body
 		header
-			h1 Jak má Tomáš v pokojíčku?
+			h1 Teplota a vlhkost v pokoji.
 		.container
 			.main-content
 				block content
